new auth with jwt and basic OAuth2